crates/strider/tests/snapshots/v3__aarch64__calling_convention__narrow_widths.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x964:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x12000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "10" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "10" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v18" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v18" [color="#888888", style=dashed];
  "v18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nx2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v21" [color="#888888", style=dashed];
  "v21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v12" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v24" [color="#888888", style=dashed];
  "v24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[3] ← x3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="SignExtend\nu16 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu32 → u16", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "33" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="SignExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "41" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x12014:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "43" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x12014:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "45" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x12014:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "47" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x12014:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "49" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "53" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "51" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
